umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0063_ZINC03814455.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidElement
    message: Invalid element at position 0
opensmiles:
  success: false
  error:
    error_type: InvalidElement
    message: Invalid element at position 0
